extra-bae-ingress-alb/bae-ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: bae-ingress-alb
  namespace: marketplace
spec:
  rules:
  - host: dome-marketplace-alb.dev.in2.es
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bae-biz-ecosystem-logic-proxy
            port: 
              number: 8004
  tls:
  - hosts:
    - dome-marketplace-alb.dev.in2.es
    secretName: bae-alb-tls-sec
